--- a/app/src/main/res/layout/view_loading_main.xml
+++ b/app/src/main/res/layout/view_loading_main.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
+    <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_gravity="center"
+            android:layout_width="@dimen/progressSize"
+            android:layout_height="@dimen/progressSize"
+    android:layout_marginBottom="@dimen/margin_16"/>
+
+    <TextView android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="center"
+              android:text="@string/loader"
+              style="@style/loaderTextStyle"/>
 
 </LinearLayout>
