--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,5 +2,12 @@
 <resources>
     <dimen name="headerTextSize">21dp</dimen>
     <dimen name="margin_14">14dp</dimen>
+    <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_8">8dp</dimen>
+    <dimen name="margin_24">24dp</dimen>
+    <dimen name="progressSize">48dp</dimen>
+    <dimen name="textSize_18">18dp</dimen>
+    <dimen name="textSize_15">15dp</dimen>
+
     <dimen name="line_height">1dp</dimen>
 </resources>
