Added recycler view and adpater with some view model changes.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+>
+
+    <data>
+
+        <variable
+                name="viewModel"
+                type="self.com.githubtrendinglistapp.viewmodel.MainViewModel"/>
+    </data>
+<RelativeLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
@@ -11,21 +21,29 @@
     <include
             android:id="@+id/header"
             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             layout="@layout/view_header_main"
-             android:layout_alignParentTop="true"/>
+            android:layout_height="wrap_content"
+            layout="@layout/view_header_main"
+            android:layout_alignParentTop="true"/>
 
     <include android:layout_width="match_parent"
              android:layout_height="wrap_content"
              layout="@layout/view_loading_main"
              android:layout_centerInParent="true"
-             android:visibility="gone"
+             visible="@{viewModel.showError}"
     />
     <include android:layout_width="match_parent"
              android:layout_height="wrap_content"
              layout="@layout/view_error_main"
              android:layout_below="@+id/header"
-             android:visibility="gone"
+             visible="@{viewModel.showLoader}"
              android:layout_marginBottom="@dimen/margin_16"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/mainRecyclerView"
+            android:layout_below="@+id/header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            visible="@{!viewModel.showLoader &amp;&amp; !viewModel.showError }"/>
+
 </RelativeLayout>
+</layout>
