--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,40 +11,40 @@
     <style name="headerTextStyle">
         <item name="android:textSize">@dimen/headerTextSize</item>
         <item name="android:textColor">@color/headerTextColor</item>
-        <item name="android:fontFamily">@font/Roboto-Medium</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
     </style>
 
     <style name="loaderTextStyle">
         <item name="android:textSize">@dimen/textSize_18</item>
         <item name="android:textColor">@color/subHeaderTextColor</item>
-        <item name="android:fontFamily">@font/Roboto-Regular</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
     </style>
 
     <style name="errorHeader">
         <item name="android:textSize">@dimen/textSize_18</item>
         <item name="android:textColor">@color/subHeaderTextColor</item>
-        <item name="android:fontFamily">@font/Roboto-Bold</item>
+        <item name="android:fontFamily">@font/roboto_bold</item>
     </style>
     <style name="errorNote">
         <item name="android:textSize">@dimen/textSize_15</item>
         <item name="android:textColor">@color/noteTextColor</item>
-        <item name="android:fontFamily">@font/Roboto-Regular</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
     </style>
     <style name="buttonStyle">
         <item name="android:textSize">@dimen/textSize_15</item>
         <item name="android:textColor">@color/buttonColor</item>
-        <item name="android:fontFamily">@font/Roboto-Medium</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
     </style>
 
     <style name="rowRegularStyle">
         <item name="android:textSize">@dimen/textSize_12</item>
         <item name="android:textColor">@color/rowTextColor</item>
-        <item name="android:fontFamily">@font/Roboto-Regular</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
     </style>
     <style name="rowMediumStyle">
         <item name="android:textSize">@dimen/textSize_15</item>
         <item name="android:textColor">@color/rowTextColor</item>
-        <item name="android:fontFamily">@font/Roboto-Medium</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
     </style>
 
 </resources>
