--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<layout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
->
 
-    <data>
 
-        <variable
-                name="viewModel"
-                type="self.com.githubtrendinglistapp.viewmodel.MainViewModel"/>
-    </data>
-<RelativeLayout
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+                 xmlns:tools="http://schemas.android.com/tools"
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,25 +15,25 @@
             layout="@layout/view_header_main"
             android:layout_alignParentTop="true"/>
 
-    <include android:layout_width="match_parent"
+    <include android:id="@+id/loaderView"
+            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              layout="@layout/view_loading_main"
              android:layout_centerInParent="true"
-             visible="@{viewModel.showError}"
+
     />
-    <include android:layout_width="match_parent"
+    <include android:id="@+id/errorView"
+            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              layout="@layout/view_error_main"
              android:layout_below="@+id/header"
-             visible="@{viewModel.showLoader}"
              android:layout_marginBottom="@dimen/margin_16"/>
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mainRecyclerView"
+            android:background="@color/white"
             android:layout_below="@+id/header"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            visible="@{!viewModel.showLoader &amp;&amp; !viewModel.showError }"/>
+            android:layout_height="wrap_content"/>
 
 </RelativeLayout>
-</layout>
