--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -11,5 +11,7 @@
     <dimen name="textSize_15">15dp</dimen>
     <dimen name="textSize_12">12dp</dimen>
 
+    <dimen name="imageSize">32dp</dimen>
+
     <dimen name="line_height">1dp</dimen>
 </resources>
