Created local cache and also used timer to fetch data every two hours.

--- a/app/src/main/res/layout/view_header_main.xml
+++ b/app/src/main/res/layout/view_header_main.xml
@@ -13,5 +13,5 @@
             android:text="@string/header"
             />
 
-<include layout="@layout/view_line"/>
+<!--<include layout="@layout/view_line"/>-->
 </LinearLayout>
